# python-template

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
assets/scripts/: deploy.sh  gen_ref_pages.py  setup.sh
docs/: index.md
docs/examples/: usage.ipynb
docs/examples/local/: local_usage.ipynb
docs/myproject/: SUMMARY.md  cli.md
examples/local/local_usage/: index.html
examples/usage/: index.html
myproject/: __init__.py  cli.py
myproject/SUMMARY/: index.html
myproject/cli/: index.html
search/: search_index.json
tests/: test_cli.py
