[tool.poetry]
name = "myproject"
version = "0.0.1"
description = ""
authors = ["wiseupdata <silvio.liborio@wiseupdata.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"

[tool.poetry.scripts]
myproject = "myproject.cli:main"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-material = "^9.5.2"
mkdocs-material-extensions = "^1.3.1"
mkdocs-jupyter = "^0.24.6"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
